# aiml_ported

./: Cargo.toml  LICENSE
src/: aimlparser.rs  defaultsubs.rs  kernel.rs  lib.rs  patternmgr.rs  sonicobject.rs  utils.rs  wordsub.rs
